# game-of-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  index.html  justfile  package-lock.json  pkg_README.md
.github/wokflows/: github-pages.yml
.github/workflows/: github-pages.yml
pkg/: README.md  glife_wasm.d.ts  glife_wasm.js  glife_wasm_bg.wasm  glife_wasm_bg.wasm.d.ts  package.json
site/: .swcrc  README.md  custom-elements-manifest.config.js  custom-elements.json  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vscode.html-custom-data.json  webpack.config.cjs  webpack.config.js
site/assets/: site.webmanifest
src/: lib.rs  utils.rs
tests/: web.rs
