[package]
name = "glife_wasm"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
# getrandom = { version = "0.2.7", features = ["wasm-bindgen"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }

console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.33"
